fix: entry video now visible

--- a/src/components/EntryCard.scss
+++ b/src/components/EntryCard.scss
@@ -1,3 +1,11 @@
+.video-container {
+  width: 100%;
+
+  video {
+    width: 100%;
+  }
+}
+
 .EntryCard {
   display: flex;
   flex-direction: column;
